Add MenuIcon component, update TopNav layout, and configure static export settings

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
     --color-black: #000;
     --color-white: #fff;
     --color-gray: #4B4B4B;
+    --color-gray-light: rgba(75,75,75,0.3);
     --color-primary: #0183FF;
     --color-secondary: #FF00E4;
 
